# payroll

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  loopback_full.sh  pyproject.toml  ruff.toml  start.sh
docker/: Dockerfile  docker-compose-core.yml  docker-compose.yml
frontend/vue-app/: package-lock.json  package.json
frontend/vue-app/public/: index.html
frontend/vue-app/src/: main.js
frontend/vue-app/src/assets/: custom.css
frontend/vue-app/src/components/: AllTasks.vue  AllUsers.vue  BaseTemplate.vue  CreateTask.vue  EditUserInfo.vue  MyInfo.vue  Task.vue  UserCreate.vue  UserDashboard.vue  UserInfo.vue  UserLogin.vue
frontend/vue-app/src/router/: index.js
src/: alembic.ini  main.py
src/api/v1/: router.py
src/api/v1/dependencies/: database.py
src/api/v1/endpoints/: auth.py  task.py  user.py  users.py
src/config/: config.py
src/crud/: task.py  user.py
src/database/: database.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2024_10_21_0523-87a3b6e6d629_initial.py  2024_10_26_1234-fc69656a159b_random_password_is_nullable.py  2024_10_27_2146-218390fb689b_initial.py  2024_10_30_2204-8bcb782c431c_added_tasks.py  2024_10_31_1204-db4f690ba277_added_nullable.py  2024_10_31_1219-349477bd282b_added_username.py  (+3 more)
src/models/: task.py  user.py
src/schemas/: task.py  user.py
src/tests/: conftest.py
src/tests/fixtures/: __init__.py
src/tests/fixtures/user/: users.py
src/tests/test_api/: test_auth.py  test_tasks.py  test_user.py
src/utils/: auth.py  csu.py  password.py  redis.py  send_email.py  tokens.py
(+2 files in other folders)
